--- a/worksheets/worksheet_07.ipynb
+++ b/worksheets/worksheet_07.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 07\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Youheng Yang\\\n",
+    "UID: U45006780\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -25,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.409816497085763, 5.6809071480568365, 3.55980228508167, 5.208295959299781, 4.9028302440935665, 4.952126529239965, 3.139123241718978, 5.087253309004788, 5.014886484647079, 5.965525024480413]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -49,11 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.680916892710403, 7.450710831740215, 7.252335555291618, 9.362664410426387, 7.910160792592792, 9.650914522243188, 7.771500770008955, 8.974692325667657, 7.436611466327474, 8.9064522697171]\n"
+     ]
+    }
+   ],
    "source": [
-    "c2 = np.random.normal( ... , ... , ... ).tolist()\n",
+    "c2 = np.random.normal(8, 1, 10).tolist()\n",
     "print(c2)"
    ]
   },
@@ -66,19 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.965525024480413, 8.9064522697171, 5.014886484647079, 7.436611466327474, 8.974692325667657, 5.087253309004788, 7.771500770008955, 3.139123241718978, 4.952126529239965, 9.650914522243188]\n"
+     ]
+    }
+   ],
    "source": [
     "data = []\n",
     "for i in range(10):\n",
     "    # flip coin\n",
     "    coin_output = random.choice([0, 1])\n",
     "    if coin_output == 0:\n",
-    "        p1 = ...\n",
+    "        p1 = c1.pop()\n",
     "        data.append(p1)\n",
     "    else:\n",
-    "        p2 = ...\n",
+    "        p2 = c2.pop()\n",
     "        data.append(p2)\n",
     "print(data)"
    ]
@@ -91,9 +116,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- The mean and var of these two normal distribution.\n",
+    "- The probability of each distribution."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,20 +139,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.965525024480413, 5.014886484647079, 5.087253309004788, 3.139123241718978, 4.952126529239965]\n",
+      "[8.9064522697171, 7.436611466327474, 8.974692325667657, 7.771500770008955, 9.650914522243188]\n",
+      "P(C_1) = 0.5,  P(C_2) = 0.5\n",
+      "mean_1 = 4.831782917818244,  mean_2 = 8.548034270792874\n",
+      "var_1 = 0.8527485130559429,  var_2 = 0.6730220669813904\n"
+     ]
+    }
+   ],
    "source": [
-    "kmeans = KMeans(2, init='k-means++').fit(X=np.array(data).reshape(-1, 1))\n",
+    "kmeans = KMeans(2, init='k-means++', n_init='auto').fit(X=np.array(data).reshape(-1, 1))\n",
     "\n",
     "c1 = [x[0] for x in filter(lambda x: x[1] == 0, zip(data, kmeans.labels_))]\n",
     "print(c1)\n",
-    "c2 = ...\n",
+    "c2 = [x[0] for x in filter(lambda x: x[1] == 1, zip(data, kmeans.labels_))]\n",
     "print(c2)\n",
     "\n",
-    "prob_c = [ len(c1) / (len(c1) + len(c2)) , ... ]\n",
-    "mean = [ sum(c1)/len(c1) , ... ]\n",
-    "var = [ sum(map(lambda x : (x - mean[0])**2, c1)) / len(c1) , ... ]\n",
+    "prob_c = [ len(c1) / (len(c1) + len(c2)) , len(c2) / (len(c1) + len(c2)) ]\n",
+    "mean = [ sum(c1)/len(c1) , sum(c2)/len(c2) ]\n",
+    "var = [ sum(map(lambda x : (x - mean[0])**2, c1)) / len(c1) , sum(map(lambda x : (x - mean[1])**2, c2)) / len(c2) ]\n",
     "\n",
     "print(\"P(C_1) = \" + str(prob_c[0]) + \",  P(C_2) = \" + str(prob_c[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
@@ -144,9 +185,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "point =  5.965525024480413\n",
+      "probability of observing that point if it came from cluster 0 =  0.19331133398721742\n",
+      "probability of observing that point if it came from cluster 1 =  0.000376365274823408\n",
+      "point =  8.9064522697171\n",
+      "probability of observing that point if it came from cluster 0 =  5.154617455402042e-06\n",
+      "probability of observing that point if it came from cluster 1 =  0.5143937786919358\n",
+      "point =  5.014886484647079\n",
+      "probability of observing that point if it came from cluster 0 =  0.457169698698438\n",
+      "probability of observing that point if it came from cluster 1 =  6.144671452408216e-07\n",
+      "point =  7.436611466327474\n",
+      "probability of observing that point if it came from cluster 0 =  0.004404975036798033\n",
+      "probability of observing that point if it came from cluster 1 =  0.15160026918091593\n",
+      "point =  8.974692325667657\n",
+      "probability of observing that point if it came from cluster 0 =  3.5054389065113286e-06\n",
+      "probability of observing that point if it came from cluster 1 =  0.48485585528195285\n",
+      "point =  5.087253309004788\n",
+      "probability of observing that point if it came from cluster 0 =  0.44730104946005367\n",
+      "probability of observing that point if it came from cluster 1 =  1.0743241306077842e-06\n",
+      "point =  7.771500770008955\n",
+      "probability of observing that point if it came from cluster 0 =  0.0012287722189918409\n",
+      "probability of observing that point if it came from cluster 1 =  0.304650613249596\n",
+      "point =  3.139123241718978\n",
+      "probability of observing that point if it came from cluster 0 =  0.06524192003927481\n",
+      "probability of observing that point if it came from cluster 1 =  5.590834771113133e-15\n",
+      "point =  4.952126529239965\n",
+      "probability of observing that point if it came from cluster 0 =  0.46319554151924397\n",
+      "probability of observing that point if it came from cluster 1 =  3.749790856344227e-07\n",
+      "point =  9.650914522243188\n",
+      "probability of observing that point if it came from cluster 0 =  5.432922358751445e-08\n",
+      "probability of observing that point if it came from cluster 1 =  0.1547990029371347\n",
+      "5.965525024480413\n",
+      "Probability of coming from C_1 = 0.9980568447234524\n",
+      "Probability of coming from C_2 = 0.0019431552765476448\n",
+      "\n",
+      "8.9064522697171\n",
+      "Probability of coming from C_1 = 1.002066124484309e-05\n",
+      "Probability of coming from C_2 = 0.9999899793387551\n",
+      "\n",
+      "5.014886484647079\n",
+      "Probability of coming from C_1 = 0.9999986559338445\n",
+      "Probability of coming from C_2 = 1.3440661555341779e-06\n",
+      "\n",
+      "7.436611466327474\n",
+      "Probability of coming from C_1 = 0.02823607026088588\n",
+      "Probability of coming from C_2 = 0.9717639297391141\n",
+      "\n",
+      "8.974692325667657\n",
+      "Probability of coming from C_1 = 7.229805569391618e-06\n",
+      "Probability of coming from C_2 = 0.9999927701944306\n",
+      "\n",
+      "5.087253309004788\n",
+      "Probability of coming from C_1 = 0.9999975982136603\n",
+      "Probability of coming from C_2 = 2.401786339664525e-06\n",
+      "\n",
+      "7.771500770008955\n",
+      "Probability of coming from C_1 = 0.004017178918773619\n",
+      "Probability of coming from C_2 = 0.9959828210812265\n",
+      "\n",
+      "3.139123241718978\n",
+      "Probability of coming from C_1 = 0.9999999999999143\n",
+      "Probability of coming from C_2 = 8.569390305722214e-14\n",
+      "\n",
+      "4.952126529239965\n",
+      "Probability of coming from C_1 = 0.9999991904525228\n",
+      "Probability of coming from C_2 = 8.095474771651511e-07\n",
+      "\n",
+      "9.650914522243188\n",
+      "Probability of coming from C_1 = 3.5096611405088673e-07\n",
+      "Probability of coming from C_2 = 0.9999996490338859\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import norm\n",
     "\n",
@@ -171,8 +289,8 @@
     "    prob_x = prob_c[0] * pdf_i[0] + prob_c[1] * pdf_i[1]\n",
     "\n",
     "    # P(C_j | X_i) = P(X_i | C_j)P(C_j) / P(X_i)\n",
-    "    prob_c0_x.append( ... )\n",
-    "    prob_c1_x.append( ... )\n",
+    "    prob_c0_x.append(pdf_i[0] * prob_c[0] / prob_x)\n",
+    "    prob_c1_x.append(pdf_i[1] * prob_c[1] / prob_x)\n",
     "\n",
     "probs = zip(data, prob_c0_x, prob_c1_x)\n",
     "for p in probs:\n",
@@ -191,13 +309,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(C_1) = 0.5030323139935982,  P(C_2) = 0.49696768600640173\n",
+      "mean_1 = 4.848328172024482,  mean_2 = 8.553962309084563\n",
+      "var_1 = 0.853022258492692,  var_2 = 0.6730572086193781\n"
+     ]
+    }
+   ],
    "source": [
-    "prob_c = [sum(prob_c0_x)/ len(prob_c0_x), ... ]\n",
-    "mean = [sum([x[0] * x[1] for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), ... ]\n",
-    "var = [ ... , ... ]\n",
+    "prob_c = [sum(prob_c0_x)/ len(prob_c0_x), sum(prob_c1_x)/ len(prob_c1_x) ]\n",
+    "mean = [sum([x[0] * x[1] for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), sum([x[0] * x[1] for x in zip(prob_c1_x, data)]) / sum(prob_c1_x)]\n",
+    "\n",
+    "c_0 = [x[0] for x in filter(lambda x: x[1] > x[2], zip(data, prob_c0_x, prob_c1_x))]\n",
+    "c_1 = [x[0] for x in filter(lambda x: x[1] < x[2], zip(data, prob_c0_x, prob_c1_x))]\n",
+    "var = [ sum(map(lambda x : (x - mean[0])**2, c_0)) / len(c_0) , sum(map(lambda x : (x - mean[1])**2, c_1)) / len(c_1) ]\n",
     "\n",
     "print(\"P(C_1) = \" + str(prob_c[0]) + \",  P(C_2) = \" + str(prob_c[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
@@ -218,10 +349,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "point =  5.965525024480413\n",
+      "probability of observing that point if it came from cluster 0 =  0.19837102954853322\n",
+      "probability of observing that point if it came from cluster 1 =  0.0003641053209213856\n",
+      "point =  8.9064522697171\n",
+      "probability of observing that point if it came from cluster 0 =  5.69369626890353e-06\n",
+      "probability of observing that point if it came from cluster 1 =  0.5167727096992607\n",
+      "point =  5.014886484647079\n",
+      "probability of observing that point if it came from cluster 0 =  0.45885019923756776\n",
+      "probability of observing that point if it came from cluster 1 =  5.874954804415078e-07\n",
+      "point =  7.436611466327474\n",
+      "probability of observing that point if it came from cluster 0 =  0.004685384817129093\n",
+      "probability of observing that point if it came from cluster 1 =  0.1494190162166083\n",
+      "point =  8.974692325667657\n",
+      "probability of observing that point if it came from cluster 0 =  3.879016149633699e-06\n",
+      "probability of observing that point if it came from cluster 1 =  0.4875363599665487\n",
+      "point =  5.087253309004788\n",
+      "probability of observing that point if it came from cluster 0 =  0.4496909094851195\n",
+      "probability of observing that point if it came from cluster 1 =  1.0280805220621115e-06\n",
+      "point =  7.771500770008955\n",
+      "probability of observing that point if it came from cluster 0 =  0.0013180626281560728\n",
+      "probability of observing that point if it came from cluster 1 =  0.3015640328582912\n",
+      "point =  3.139123241718978\n",
+      "probability of observing that point if it came from cluster 0 =  0.06282603765849283\n",
+      "probability of observing that point if it came from cluster 1 =  5.225909388649416e-15\n",
+      "point =  4.952126529239965\n",
+      "probability of observing that point if it came from cluster 0 =  0.4642313373729045\n",
+      "probability of observing that point if it came from cluster 1 =  3.582437566622464e-07\n",
+      "point =  9.650914522243188\n",
+      "probability of observing that point if it came from cluster 0 =  6.121413353363069e-08\n",
+      "probability of observing that point if it came from cluster 1 =  0.15705703468128976\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob_c0_x = [] # P(C_0 | X_i)\n",
+    "prob_c1_x = [] # P(C_1 | X_i)\n",
+    "prob_x = [] # P(X_i)\n",
+    "\n",
+    "k = 2\n",
+    "\n",
+    "for p in data:\n",
+    "    print(\"point = \", p)\n",
+    "    pdf_i = []\n",
+    "\n",
+    "    for j in range(k):\n",
+    "        # P(X_i | C_j)\n",
+    "        pdf_i.append(norm.pdf(p, mean[j], var[j]))\n",
+    "        print(\"probability of observing that point if it came from cluster \" + str(j) + \" = \", pdf_i[j])\n",
+    "        # P(C_j) already computed\n",
+    "        prob_c[j]\n",
+    "\n",
+    "    # P(X_i) = P(C_0)P(X_i | C_0) + P(C_1)P(X_i | C_1)\n",
+    "    prob_x = prob_c[0] * pdf_i[0] + prob_c[1] * pdf_i[1]\n",
+    "\n",
+    "    # P(C_j | X_i) = P(X_i | C_j)P(C_j) / P(X_i)\n",
+    "    prob_c0_x.append(pdf_i[0] * prob_c[0] / prob_x)\n",
+    "    prob_c1_x.append(pdf_i[1] * prob_c[1] / prob_x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,10 +429,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "point =  5.965525024480413\n",
+      "Probability of coming from C_0\n",
+      "\n",
+      "point =  8.9064522697171\n",
+      "Probability of coming from C_1\n",
+      "\n",
+      "point =  5.014886484647079\n",
+      "Probability of coming from C_0\n",
+      "\n",
+      "point =  7.436611466327474\n",
+      "Probability of coming from C_1\n",
+      "\n",
+      "point =  8.974692325667657\n",
+      "Probability of coming from C_1\n",
+      "\n",
+      "point =  5.087253309004788\n",
+      "Probability of coming from C_0\n",
+      "\n",
+      "point =  7.771500770008955\n",
+      "Probability of coming from C_1\n",
+      "\n",
+      "point =  3.139123241718978\n",
+      "Probability of coming from C_0\n",
+      "\n",
+      "point =  4.952126529239965\n",
+      "Probability of coming from C_0\n",
+      "\n",
+      "point =  9.650914522243188\n",
+      "Probability of coming from C_1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "probs = zip(data, prob_c0_x, prob_c1_x)\n",
+    "\n",
+    "c0 = []\n",
+    "c1 = []\n",
+    "for p in probs:\n",
+    "    print(\"point = \", p[0])\n",
+    "    if p[1] > p[2]:\n",
+    "        c0.append(p[0])\n",
+    "        print(\"Probability of coming from C_0\")\n",
+    "    else:\n",
+    "        c1.append(p[0])\n",
+    "        print(\"Probability of coming from C_1\")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -343,11 +586,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit ('env': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -361,9 +601,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
