--- a/worksheets/worksheet_07.ipynb
+++ b/worksheets/worksheet_07.ipynb
@@ -172,9 +172,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The propability is exactly the same; the mean is close; the variance is kind of close "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,16 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(C_1) = 0.5030323139935982,  P(C_2) = 0.49696768600640173\n",
-      "mean_1 = 4.848328172024482,  mean_2 = 8.553962309084563\n",
-      "var_1 = 0.853022258492692,  var_2 = 0.6730572086193781\n"
+      "P(C_1) = 0.5033373433835514,  P(C_2) = 0.4966626566164486\n",
+      "mean_1 = 4.849884059810831,  mean_2 = 8.55466135679956\n",
+      "var_1 = 0.8954031438399681,  var_2 = 0.6628469963381958\n"
      ]
     }
    ],
@@ -326,9 +329,11 @@
     "prob_c = [sum(prob_c0_x)/ len(prob_c0_x), sum(prob_c1_x)/ len(prob_c1_x) ]\n",
     "mean = [sum([x[0] * x[1] for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), sum([x[0] * x[1] for x in zip(prob_c1_x, data)]) / sum(prob_c1_x)]\n",
     "\n",
-    "c_0 = [x[0] for x in filter(lambda x: x[1] > x[2], zip(data, prob_c0_x, prob_c1_x))]\n",
-    "c_1 = [x[0] for x in filter(lambda x: x[1] < x[2], zip(data, prob_c0_x, prob_c1_x))]\n",
-    "var = [ sum(map(lambda x : (x - mean[0])**2, c_0)) / len(c_0) , sum(map(lambda x : (x - mean[1])**2, c_1)) / len(c_1) ]\n",
+    "# c_0 = [x[0] for x in filter(lambda x: x[1] > x[2], zip(data, prob_c0_x, prob_c1_x))]\n",
+    "# c_1 = [x[0] for x in filter(lambda x: x[1] < x[2], zip(data, prob_c0_x, prob_c1_x))]\n",
+    "#var = [ sum(map(lambda x : (x - mean[0])**2, c_0)) / len(c_0) , sum(map(lambda x : (x - mean[1])**2, c_1)) / len(c_1) ]\n",
+    "var = [sum(map(lambda x : (x[0] * x[1]), zip(prob_c0_x, ((data-mean[0])*np.transpose(data-mean[0]))))) / sum(prob_c0_x)  , sum(map(lambda x : (x[0] * x[1]), zip(prob_c1_x, ((data - mean[1])*np.transpose(data - mean[1]))))) / sum(prob_c0_x) ]\n",
+    "\n",
     "\n",
     "print(\"P(C_1) = \" + str(prob_c[0]) + \",  P(C_2) = \" + str(prob_c[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
@@ -336,9 +341,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "They are relatively close"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -357,35 +365,75 @@
      "output_type": "stream",
      "text": [
       "point =  5.965525024480413\n",
-      "probability of observing that point if it came from cluster 0 =  0.19837102954853322\n",
-      "probability of observing that point if it came from cluster 1 =  0.0003641053209213856\n",
+      "probability of observing that point if it came from cluster 0 =  0.20501509200272683\n",
+      "probability of observing that point if it came from cluster 1 =  0.0002926669652388562\n",
       "point =  8.9064522697171\n",
-      "probability of observing that point if it came from cluster 0 =  5.69369626890353e-06\n",
-      "probability of observing that point if it came from cluster 1 =  0.5167727096992607\n",
+      "probability of observing that point if it came from cluster 0 =  1.5558702295951553e-05\n",
+      "probability of observing that point if it came from cluster 1 =  0.5227964385908351\n",
       "point =  5.014886484647079\n",
-      "probability of observing that point if it came from cluster 0 =  0.45885019923756776\n",
-      "probability of observing that point if it came from cluster 1 =  5.874954804415078e-07\n",
+      "probability of observing that point if it came from cluster 0 =  0.43804380477541116\n",
+      "probability of observing that point if it came from cluster 1 =  3.861992439997545e-07\n",
       "point =  7.436611466327474\n",
-      "probability of observing that point if it came from cluster 0 =  0.004685384817129093\n",
-      "probability of observing that point if it came from cluster 1 =  0.1494190162166083\n",
+      "probability of observing that point if it came from cluster 0 =  0.0068649941653084355\n",
+      "probability of observing that point if it came from cluster 1 =  0.14510876745958953\n",
       "point =  8.974692325667657\n",
-      "probability of observing that point if it came from cluster 0 =  3.879016149633699e-06\n",
-      "probability of observing that point if it came from cluster 1 =  0.4875363599665487\n",
+      "probability of observing that point if it came from cluster 0 =  1.0984051530742384e-05\n",
+      "probability of observing that point if it came from cluster 1 =  0.492381831719739\n",
       "point =  5.087253309004788\n",
-      "probability of observing that point if it came from cluster 0 =  0.4496909094851195\n",
-      "probability of observing that point if it came from cluster 1 =  1.0280805220621115e-06\n",
+      "probability of observing that point if it came from cluster 0 =  0.43016101486559766\n",
+      "probability of observing that point if it came from cluster 1 =  6.877467064144291e-07\n",
       "point =  7.771500770008955\n",
-      "probability of observing that point if it came from cluster 0 =  0.0013180626281560728\n",
-      "probability of observing that point if it came from cluster 1 =  0.3015640328582912\n",
+      "probability of observing that point if it came from cluster 0 =  0.002172804340137998\n",
+      "probability of observing that point if it came from cluster 1 =  0.29947905506742123\n",
       "point =  3.139123241718978\n",
-      "probability of observing that point if it came from cluster 0 =  0.06282603765849283\n",
-      "probability of observing that point if it came from cluster 1 =  5.225909388649416e-15\n",
+      "probability of observing that point if it came from cluster 0 =  0.07181505739496798\n",
+      "probability of observing that point if it came from cluster 1 =  1.9263665965668486e-15\n",
       "point =  4.952126529239965\n",
-      "probability of observing that point if it came from cluster 0 =  0.4642313373729045\n",
-      "probability of observing that point if it came from cluster 1 =  3.582437566622464e-07\n",
+      "probability of observing that point if it came from cluster 0 =  0.44264971707263484\n",
+      "probability of observing that point if it came from cluster 1 =  2.3188518848026486e-07\n",
       "point =  9.650914522243188\n",
-      "probability of observing that point if it came from cluster 0 =  6.121413353363069e-08\n",
-      "probability of observing that point if it came from cluster 1 =  0.15705703468128976\n"
+      "probability of observing that point if it came from cluster 0 =  2.5468112577003416e-07\n",
+      "probability of observing that point if it came from cluster 1 =  0.1533018404522837\n",
+      "5.965525024480413\n",
+      "Probability of coming from C_1 = 0.9985933731401164\n",
+      "Probability of coming from C_2 = 0.0014066268598835652\n",
+      "\n",
+      "8.9064522697171\n",
+      "Probability of coming from C_1 = 3.0159580577333253e-05\n",
+      "Probability of coming from C_2 = 0.9999698404194226\n",
+      "\n",
+      "5.014886484647079\n",
+      "Probability of coming from C_1 = 0.9999991300468728\n",
+      "Probability of coming from C_2 = 8.69953127206389e-07\n",
+      "\n",
+      "7.436611466327474\n",
+      "Probability of coming from C_1 = 0.045751531481700546\n",
+      "Probability of coming from C_2 = 0.9542484685182995\n",
+      "\n",
+      "8.974692325667657\n",
+      "Probability of coming from C_1 = 2.2607282907058696e-05\n",
+      "Probability of coming from C_2 = 0.999977392717093\n",
+      "\n",
+      "5.087253309004788\n",
+      "Probability of coming from C_1 = 0.9999984223918519\n",
+      "Probability of coming from C_2 = 1.5776081480594527e-06\n",
+      "\n",
+      "7.771500770008955\n",
+      "Probability of coming from C_1 = 0.007299115237028473\n",
+      "Probability of coming from C_2 = 0.9927008847629716\n",
+      "\n",
+      "3.139123241718978\n",
+      "Probability of coming from C_1 = 0.9999999999999735\n",
+      "Probability of coming from C_2 = 2.6468283741626855e-14\n",
+      "\n",
+      "4.952126529239965\n",
+      "Probability of coming from C_1 = 0.9999994830899829\n",
+      "Probability of coming from C_2 = 5.169100171694309e-07\n",
+      "\n",
+      "9.650914522243188\n",
+      "Probability of coming from C_1 = 1.6836286455950793e-06\n",
+      "Probability of coming from C_2 = 0.9999983163713544\n",
+      "\n"
      ]
     }
    ],
@@ -412,13 +460,23 @@
     "\n",
     "    # P(C_j | X_i) = P(X_i | C_j)P(C_j) / P(X_i)\n",
     "    prob_c0_x.append(pdf_i[0] * prob_c[0] / prob_x)\n",
-    "    prob_c1_x.append(pdf_i[1] * prob_c[1] / prob_x)"
+    "    prob_c1_x.append(pdf_i[1] * prob_c[1] / prob_x)\n",
+    "\n",
+    "probs = zip(data, prob_c0_x, prob_c1_x)\n",
+    "for p in probs:\n",
+    "    print(p[0])\n",
+    "    print(\"Probability of coming from C_1 = \" + str(p[1]))\n",
+    "    print(\"Probability of coming from C_2 = \" + str(p[2]))\n",
+    "    print()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "They are pretty much the same"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -429,60 +487,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "point =  5.965525024480413\n",
-      "Probability of coming from C_0\n",
-      "\n",
-      "point =  8.9064522697171\n",
-      "Probability of coming from C_1\n",
-      "\n",
-      "point =  5.014886484647079\n",
-      "Probability of coming from C_0\n",
-      "\n",
-      "point =  7.436611466327474\n",
-      "Probability of coming from C_1\n",
-      "\n",
-      "point =  8.974692325667657\n",
-      "Probability of coming from C_1\n",
-      "\n",
-      "point =  5.087253309004788\n",
-      "Probability of coming from C_0\n",
-      "\n",
-      "point =  7.771500770008955\n",
-      "Probability of coming from C_1\n",
-      "\n",
-      "point =  3.139123241718978\n",
-      "Probability of coming from C_0\n",
-      "\n",
-      "point =  4.952126529239965\n",
-      "Probability of coming from C_0\n",
-      "\n",
-      "point =  9.650914522243188\n",
-      "Probability of coming from C_1\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{5.965525024480413: 0,\n",
+       " 8.9064522697171: 1,\n",
+       " 5.014886484647079: 0,\n",
+       " 7.436611466327474: 1,\n",
+       " 8.974692325667657: 1,\n",
+       " 5.087253309004788: 0,\n",
+       " 7.771500770008955: 1,\n",
+       " 3.139123241718978: 0,\n",
+       " 4.952126529239965: 0,\n",
+       " 9.650914522243188: 1}"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "probs = zip(data, prob_c0_x, prob_c1_x)\n",
     "\n",
-    "c0 = []\n",
-    "c1 = []\n",
+    "labels = {}\n",
     "for p in probs:\n",
-    "    print(\"point = \", p[0])\n",
+    "\n",
     "    if p[1] > p[2]:\n",
-    "        c0.append(p[0])\n",
-    "        print(\"Probability of coming from C_0\")\n",
+    "        labels[p[0]] = 0\n",
     "    else:\n",
-    "        c1.append(p[0])\n",
-    "        print(\"Probability of coming from C_1\")\n",
-    "    print()"
+    "        labels[p[0]] = 1\n",
+    "labels"
    ]
   },
   {
