--- a/labs/02-lab/lab02.ipynb
+++ b/labs/02-lab/lab02.ipynb
@@ -64,11 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: import pandas and matplotlib in this cell"
+    "#TODO: import pandas and matplotlib in this cell\n",
+    "#\n",
+    "import pandas as pd\n",
+    "import matplotlib as plt"
    ]
   },
   {
@@ -81,11 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: read the cookies.csv file into a pandas dataframe"
+    "#TODO: read the cookies.csv file into a pandas dataframe\n",
+    "cookies = pd.read_csv('cookies.csv')"
    ]
   },
   {
@@ -536,7 +540,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Add your code here"
+    "#Add your code \n",
+    "#"
    ]
   },
   {
@@ -603,13 +608,21 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
