--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +118,37 @@
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
     "    return NotImplementedError(\"Implement this function\")\n",
+    "\n",
+    "#\n",
+    "def generate_k(dataset, k):\n",
+    "    \"\"\"\n",
+    "    Given `data_set`, which is an array of arrays,\n",
+    "    return a random set of k points from the data_set\n",
+    "    \"\"\"\n",
+    "    return random.sample(dataset, k)\n",
+    "\n",
+    "def generate_k_pp(dataset, k):\n",
+    "    \"\"\"\n",
+    "    Given `data_set`, which is an array of arrays,\n",
+    "    return a random set of k points from the data_set\n",
+    "    where points are picked with a probability proportional\n",
+    "    to their distance as per kmeans pp\n",
+    "    \"\"\"\n",
+    "    k_points = []\n",
+    "    first_point = random.choice(dataset)\n",
+    "    k_points.append(first_point)\n",
+    "    for i in range(k-1):\n",
+    "        distances = []\n",
+    "        for point in dataset:\n",
+    "            min_dist = inf\n",
+    "            for center in k_points:\n",
+    "                min_dist = min(min_dist, distance(point, center))\n",
+    "            distances.append(min_dist)\n",
+    "        total = sum(distances)\n",
+    "        probabilities = [dist/total for dist in distances]\n",
+    "        k_points.append(random.choices(dataset, probabilities)[0])\n",
+    "    return k_points\n",
+    "#\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
@@ -523,12 +554,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
