--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,7 @@
     "from math import inf\n",
     "import random\n",
     "import csv\n",
+    "import numpy as np\n",
     "\n",
     "def get_centroid(points):\n",
     "    \"\"\"\n",
@@ -66,7 +67,17 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    points = [[int(i) for i in point] for point in points]\n",
+    "    num_points = len(points)\n",
+    "    num_dimensions = len(points[0])\n",
+    "    \n",
+    "    centroid = []\n",
+    "    for dimension in range(num_dimensions):\n",
+    "        dim_sum = 0\n",
+    "        for point in points:\n",
+    "            dim_sum += point[dimension]\n",
+    "            centroid.append(dim_sum / num_points)\n",
+    "    return centroid\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,8 +86,22 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
-    "\n",
+    "    k = len(list(set(assignments)))\n",
+    "    num_dimensions = len(dataset[0])\n",
+    "    centroids = [[0] * num_dimensions for _ in range(k)]\n",
+    "    counts = [0] * k\n",
+    "    for i in range(len(dataset)):\n",
+    "        assigned_cluster = assignments[i]\n",
+    "        for j in range(num_dimensions):\n",
+    "            centroids[assigned_cluster][j] += dataset[i][j]\n",
+    "        counts[assigned_cluster] += 1\n",
+    "    for i in range(k):\n",
+    "        if counts[i] == 0:\n",
+    "            continue\n",
+    "        for j in range(num_dimensions):\n",
+    "                centroids[i][j] /= counts[i]\n",
+    "    return centroids\n",
+    "    \n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
     "    This method assigns each point in data_points to the closest center\n",
@@ -91,35 +116,25 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    \n",
+    "    return np.sqrt(np.sum([(x- y)**2 for x, y in zip(a, b)]))\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return np.sum([(x - y)**2 for x, y in zip(a, b)])\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    cost = 0\n",
+    "    for i, cluster in clustering.items():\n",
+    "        center = get_centroid(cluster) \n",
+    "        for point in cluster:\n",
+    "         dis = distance(point, center)\n",
+    "         cost += dis\n",
+    "    return cost\n",
     "\n",
-    "def generate_k(dataset, k):\n",
-    "    \"\"\"\n",
-    "    Given `data_set`, which is an array of arrays,\n",
-    "    return a random set of k points from the data_set\n",
-    "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
-    "\n",
-    "def generate_k_pp(dataset, k):\n",
-    "    \"\"\"\n",
-    "    Given `data_set`, which is an array of arrays,\n",
-    "    return a random set of k points from the data_set\n",
-    "    where points are picked with a probability proportional\n",
-    "    to their distance as per kmeans pp\n",
-    "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
-    "\n",
-    "#\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
@@ -134,21 +149,13 @@
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
-    "    k_points = []\n",
-    "    first_point = random.choice(dataset)\n",
-    "    k_points.append(first_point)\n",
-    "    for i in range(k-1):\n",
-    "        distances = []\n",
-    "        for point in dataset:\n",
-    "            min_dist = inf\n",
-    "            for center in k_points:\n",
-    "                min_dist = min(min_dist, distance(point, center))\n",
-    "            distances.append(min_dist)\n",
-    "        total = sum(distances)\n",
-    "        probabilities = [dist/total for dist in distances]\n",
-    "        k_points.append(random.choices(dataset, probabilities)[0])\n",
-    "    return k_points\n",
-    "#\n",
+    "    n = len(dataset)\n",
+    "    distances = np.zeros(n)\n",
+    "    for i, point in enumerate(dataset):\n",
+    "         distances[i] = np.max([distance(point,c) for c in dataset])\n",
+    "         probabilities = distances / np.sum(distances)\n",
+    "         indices = np.random.choice(range(n), size=k, replace=True, p=probabilities)\n",
+    "    return [dataset[i] for i in indices]\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
@@ -176,7 +183,7 @@
     "        raise ValueError(\"lengths must be in [1, len(dataset)]\")\n",
     "\n",
     "    k_points = generate_k_pp(dataset, k)\n",
-    "    return _do_lloyds_algo(dataset, k_points)\n"
+    "    return _do_lloyds_algo(dataset, k_points)"
    ]
   },
   {
@@ -197,9 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_kmeans_when_k_is_1 passed!\n",
+      "test_kmeans_when_k_is_2 passed!\n",
+      "test_kmeans_when_k_is_3 passed!\n",
+      "test_kmeans_pp_when_k_is_2 passed!\n",
+      "test_kmeans_pp_when_k_is_3 passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
@@ -402,16 +421,36 @@
    "outputs": [],
    "source": [
     "def euclidean_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    return np.sqrt(sum([(p-q) ** 2 for p, q in zip(x, y)])) \n",
     "\n",
     "def manhattan_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    return np.abs(sum([(p-q) for p, q in zip(x, y)]))\n",
     "\n",
     "def jaccard_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x) == 0:\n",
+    "        return False\n",
+    "    p = 0\n",
+    "    q = 0\n",
+    "    for i in range(len(x)):\n",
+    "        if x[i] != y[i]:\n",
+    "            p += 1\n",
+    "        else:\n",
+    "            q += 1\n",
+    "    return float(p) / (p+q)\n",
     "\n",
     "def cosine_sim(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")"
+    "    sumxx, sumxy, sumyy = 0, 0, 0\n",
+    "\n",
+    "    if len(x)!=len(y):\n",
+    "        raise ValueError(\"lengths must be equal\")\n",
+    "    for i in range(len(x)):\n",
+    "        a = x[i]; b = y[i]\n",
+    "        sumxx += a*a\n",
+    "        sumyy += b*b\n",
+    "        sumxy += a*b\n",
+    "    if sumxx*sumyy == 0:\n",
+    "        raise ValueError(\"lengths must not be zero\")\n",
+    "    return sumxy/np.sqrt(sumxx*sumyy)"
    ]
   },
   {
@@ -426,9 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "euclidean_dist is right!\n",
+      "manhattan_dist is right!\n",
+      "cosine_sim is right!\n",
+      "jaccard_dist is right!\n"
+     ]
+    }
+   ],
    "source": [
     "def _generate_rand_point(dimension):\n",
     "    return [random.randrange(1, 1000, 1) for i in range(dimension)]\n",
